# thanthuv2

./: .gitignore  AppDelegate.cpp  CCFileUtils.cpp  game-readme.txt  game.jks  instruction.txt  notes.txt  wip.pat
frida-server-16.4.8-android-arm64/: dumpLua.js  dumpPng.js  dumpSpine.js  exmaple-frida.py  main.py  tryit.py
frida-server-16.4.8-android-arm64/__handlers__/libandroid.so/: AAsset_getLength.js  AAsset_read.js
frida-server-16.4.8-android-arm64/__handlers__/libc.so/: fopen.js  fread.js  memcpy.js
frida-server-16.4.8-android-arm64/__handlers__/libcocos2dluar.so/: LZ4_decompress_safe.js  _Z14getLuaTypeNameIN7cocos2d9Fil_45f87f25.js  _Z16tj_xxtea_decryptPhjS_jPj.js  _Z18strQuickFind4CharsPKciS0_i.js  _Z20luaval_to_std_stringP9lua_St_ce443dd7.js  _Z31lua_register_cocos2dx_FileUt_aaabfbdf.js  _Z32lua_cocos2dx_FileUtils_listF_2980f6a2.js  _Z33lua_cocos2dx_FileUtils_remov_71438f64.js  _Z33lua_cocos2dx_FileUtils_renam_69e39623.js  _Z34lua_cocos2dx_FileUtils_getFi_ea6b5dca.js  _Z34lua_cocos2dx_FileUtils_getIn_e338d275.js  _Z34lua_cocos2dx_FileUtils_isFil_1d85f644.js  _Z34lua_cocos2dx_FileUtils_write_22d51aa4.js  _Z35lua_cocos2dx_FileUtils_addPa_8784bce9.js  _Z36lua_cocos2dx_FileUtils_addSe_0385e22d.js  _Z36lua_cocos2dx_FileUtils_isPop_b7fd090f.js  _Z37lua_cocos2dx_FileUtils_addFi_9fdbf1ad.js  _Z37lua_cocos2dx_FileUtils_getNe_beeed1bc.js  _Z37lua_cocos2dx_FileUtils_getSe_ffc72c17.js  _Z37lua_cocos2dx_FileUtils_isAbs_170a05c4.js  _Z37lua_cocos2dx_FileUtils_listF_23ec3163.js  _Z37lua_cocos2dx_FileUtils_setPo_ef805092.js  _Z37lua_cocos2dx_FileUtils_setSe_5c6d4182.js  _Z38lua_cocos2dx_FileUtils_creat_aa38b5bf.js  _Z38lua_cocos2dx_FileUtils_destr_7b17fe39.js  _Z38lua_cocos2dx_FileUtils_getFi_db464337.js  _Z38lua_cocos2dx_FileUtils_getWr_52676ae7.js  _Z38lua_cocos2dx_FileUtils_remov_601e57f4.js  _Z38lua_cocos2dx_FileUtils_setWr_d2a1a741.js  _Z39lua_cocos2dx_FileUtils_getFi_3c5c6450.js  _Z39lua_cocos2dx_FileUtils_getSu_2945c26b.js  _Z39lua_cocos2dx_FileUtils_isDir_1c1f9f86.js  _Z40lua_cocos2dx_FileUtils_addFi_fe0a8098.js  _Z40lua_cocos2dx_FileUtils_getSt_f05b3891.js  _Z40lua_cocos2dx_FileUtils_write_9c7f0f6a.js  _Z41lua_cocos2dx_FileUtils_getFu_66626272.js  _Z41lua_cocos2dx_FileUtils_purge_f7291a3a.js  _Z41lua_cocos2dx_FileUtils_setSl_3b00bf38.js  _Z42lua_cocos2dx_FileUtils_fullP_c90c8674.js  _Z42lua_cocos2dx_FileUtils_getVa_87de6be8.js  (+170 more)
frida-server-16.4.8-android-arm64/__handlers__/liblz4.so/: LZ4_decompress_safe.js
proj.android/: .gitignore  build.gradle  gradle.properties  settings.gradle
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.android/thanthu_v2/: .gitignore  build.gradle
proj.android/thanthu_v2/src/main/: AndroidManifest.xml
proj.android/thanthu_v2/src/main/assets/: TivicloudSDK.xml
proj.android/thanthu_v2/src/main/assets/repository/: repo.mapping
proj.android/thanthu_v2/src/main/assets/res/: channel.plist  language.plist  version.plist
proj.android/thanthu_v2/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  mynativelib.cpp
proj.android/thanthu_v2/src/main/res/anim/: tivic_shake.xml  tivic_stage_show.xml
proj.android/thanthu_v2/src/main/res/drawable/: gg_badge_background.xml  gg_btn_background.xml  gg_circle_indicator.xml  gg_circle_indicator_disable.xml  gg_circle_indicator_enable.xml  gg_circle_progress_background.xml  gg_circle_progress_foreground.xml  gg_loading_background.xml  gg_loading_progress_shape.xml  gg_shape_account_corner.xml  gg_shape_border_normal.xml  (+7 more)
(+5247 files in other folders)
